--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -68,7 +68,7 @@ jobs:
           INSTALLATION_ID: ${{ steps.generate-token.outputs.result }}
         with:
           script: |
-            console.log('APPLICATION_ID:', process.env.APPLICATION_ID);
+            console.log('APPLICATION_ID:', process.env.APPLICATION_ID?.slice(0, 4));
             console.log('PRIVATE_KEY starts with:', process.env.PRIVATE_KEY?.slice(0, 20));
             console.log('INSTALLATION_ID:', process.env.INSTALLATION_ID);
             const { createAppAuth } = require("@octokit/auth-app");
