--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -65,9 +65,10 @@ jobs:
           INSTALLATION_ID: ${{ steps.generate-token.outputs.result }}
         with:
           script: |
-            console.log('APPLICATION_ID:', process.env.APPLICATION_ID?.slice(0, 4));
+            console.log('APPLICATION_ID:', process.env.APPLICATION_ID, 'type:', typeof process.env.APPLICATION_ID);
             console.log('PRIVATE_KEY starts with:', process.env.PRIVATE_KEY?.slice(0, 40));
-            console.log('INSTALLATION_ID:', process.env.INSTALLATION_ID);
+            console.log('INSTALLATION_ID:', process.env.INSTALLATION_ID, 'type:', typeof process.env.INSTALLATION_ID);
+
             const { createAppAuth } = require("@octokit/auth-app");
             const auth = createAppAuth({
               appId: Number(process.env.APPLICATION_ID),
@@ -75,6 +76,7 @@ jobs:
               installationId: Number(process.env.INSTALLATION_ID)
             });
             const { token } = await auth({ type: "installation" });
+            console.log('Generated token (first 10 chars):', token?.slice(0, 10), 'length:', token?.length);
             return token ? token : null;
       # This step assigns a GitHub Copilot license to the user who created the issue
       - name: Assign GitHub Copilot license
@@ -195,11 +197,14 @@ jobs:
           INSTALLATION_ID: ${{ steps.generate-token.outputs.result }}
         with:
           script: |
+            console.log('APPLICATION_ID:', process.env.APPLICATION_ID, 'type:', typeof process.env.APPLICATION_ID);
+            console.log('PRIVATE_KEY starts with:', process.env.PRIVATE_KEY?.slice(0, 40));
+            console.log('INSTALLATION_ID:', process.env.INSTALLATION_ID, 'type:', typeof process.env.INSTALLATION_ID);
             const { createAppAuth } = require("@octokit/auth-app");
             const auth = createAppAuth({
-              appId: process.env.APPLICATION_ID,
+              appId: Number(process.env.APPLICATION_ID),
               privateKey: process.env.PRIVATE_KEY,
-              installationId: process.env.INSTALLATION_ID
+              installationId: Number(process.env.INSTALLATION_ID)
             });
             const { token } = await auth({ type: "installation" });
             console.log('Generated token (first 10 chars):', token?.slice(0, 10), 'length:', token?.length);
