--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -88,7 +88,7 @@ jobs:
         with:
           script: |
             const { Octokit } = require("@octokit/action");
-            console.log("Github token length: ", process.env.GITHUB_TOKEN.length);
+            console.log('Generated token (first 10 chars):', process.env.GITHUB_TOKEN?.slice(0, 10), 'length:', process.env.GITHUB_TOKEN?.length);
             const octokit = new Octokit();
             const login = context.payload.sender.login;
             const response = await octokit.request('POST /enterprises/{enterprise}/copilot/selected_users', {
