--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -77,19 +77,25 @@ jobs:
             const { token } = await auth({ type: "installation" });
             console.log('Generated token (first 10 chars):', token?.slice(0, 10), 'length:', token?.length);
             return token ? token : null;
+      # Strip quotes from GITHUB_TOKEN
+      - name: Strip quotes from GITHUB_TOKEN
+        id: strip-token
+        run: |
+          # Remove leading and trailing quotes if present
+          CLEAN_TOKEN=$(echo '${{ steps.get-installation-token.outputs.result }}' | sed 's/^"\(.*\)"$/\1/')
+          echo "GITHUB_TOKEN=$CLEAN_TOKEN" >> $GITHUB_ENV
       # This step assigns a GitHub Copilot license to the user who created the issue
       - name: Assign GitHub Copilot license
         id: assign_license
         continue-on-error: true
         uses: actions/github-script@v7
         env:
-          GH_TOKEN: ${{ steps.get-installation-token.outputs.result }}
+          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
           ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
         with:
           script: |
             const { Octokit } = require("@octokit/action");
-            console.log("Github token length: ", process.env.GH_TOKEN.length);
-            console.log('Generated token (first 10 chars):', token?.slice(0, 10), 'length:', token?.length);
+            console.log("Github token length: ", process.env.GITHUB_TOKEN.length);
             const octokit = new Octokit();
             const login = context.payload.sender.login;
             const response = await octokit.request('POST /enterprises/{enterprise}/copilot/selected_users', {
