--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -7,9 +7,9 @@ on:
 
 # This workflow uses the GitHub Token to comment on the issues and close them
 env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   ENTERPRISE_ID: ${{ secrets.ENTERPRISE_ID }}
   ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 # This workflow contains two jobs: assign_github_copilot_license and remove_github_copilot_license
 jobs:
   assign_github_copilot_license:
@@ -32,6 +32,7 @@ jobs:
         env:
           APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
           PRIVATE_KEY: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+          ORGANIZATION_NAME: ${{ secrets.ORGANIZATION_NAME }}
           ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
         with:
@@ -65,10 +66,9 @@ jobs:
           INSTALLATION_ID: ${{ steps.generate-token.outputs.result }}
         with:
           script: |
-            console.log('APPLICATION_ID:', process.env.APPLICATION_ID, 'type:', typeof process.env.APPLICATION_ID);
+            console.log('APPLICATION_ID:', process.env.APPLICATION_ID?.slice(0, 4));
             console.log('PRIVATE_KEY starts with:', process.env.PRIVATE_KEY?.slice(0, 40));
-            console.log('INSTALLATION_ID:', process.env.INSTALLATION_ID, 'type:', typeof process.env.INSTALLATION_ID);
-
+            console.log('INSTALLATION_ID:', process.env.INSTALLATION_ID);
             const { createAppAuth } = require("@octokit/auth-app");
             const auth = createAppAuth({
               appId: Number(process.env.APPLICATION_ID),
@@ -76,28 +76,20 @@ jobs:
               installationId: Number(process.env.INSTALLATION_ID)
             });
             const { token } = await auth({ type: "installation" });
-            console.log('Generated token (first 10 chars):', token?.slice(0, 10), 'length:', token?.length);
             return token ? token : null;
-      # Strip quotes from GITHUB_TOKEN
-      - name: Strip quotes from GITHUB_TOKEN
-        id: strip-token
-        run: |
-          # Remove leading and trailing quotes if present
-          CLEAN_TOKEN=$(echo '${{ steps.get-installation-token.outputs.result }}' | sed 's/^"\(.*\)"$/\1/')
-          echo "GITHUB_TOKEN=$CLEAN_TOKEN" >> $GITHUB_ENV
       # This step assigns a GitHub Copilot license to the user who created the issue
       - name: Assign GitHub Copilot license
         id: assign_license
         continue-on-error: true
         uses: actions/github-script@v7
         env:
-          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.get-installation-token.outputs.result }}
           ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
         with:
           script: |
             const { Octokit } = require("@octokit/action");
             console.log("Github token length: ", process.env.GITHUB_TOKEN.length);
-            const octokit = new Octokit();
+            const octokit = new Octokit({ auth: process.env.GITHUB_TOKEN });
             const login = context.payload.sender.login;
             const response = await octokit.request('POST /enterprises/{enterprise}/copilot/selected_users', {
               enterprise: process.env.ENTERPRISE_NAME,
@@ -172,6 +164,7 @@ jobs:
         env:
           APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
           PRIVATE_KEY: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+          ORGANIZATION_NAME: ${{ secrets.ORGANIZATION_NAME }}
           ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
         with:
@@ -204,17 +197,13 @@ jobs:
           INSTALLATION_ID: ${{ steps.generate-token.outputs.result }}
         with:
           script: |
-            console.log('APPLICATION_ID:', process.env.APPLICATION_ID, 'type:', typeof process.env.APPLICATION_ID);
-            console.log('PRIVATE_KEY starts with:', process.env.PRIVATE_KEY?.slice(0, 40));
-            console.log('INSTALLATION_ID:', process.env.INSTALLATION_ID, 'type:', typeof process.env.INSTALLATION_ID);
             const { createAppAuth } = require("@octokit/auth-app");
             const auth = createAppAuth({
-              appId: Number(process.env.APPLICATION_ID),
+              appId: process.env.APPLICATION_ID,
               privateKey: process.env.PRIVATE_KEY,
-              installationId: Number(process.env.INSTALLATION_ID)
+              installationId: process.env.INSTALLATION_ID
             });
             const { token } = await auth({ type: "installation" });
-            console.log('Generated token (first 10 chars):', token?.slice(0, 10), 'length:', token?.length);
             return token ? token : null;
       # This step finds the user's login email
       - name: Invite login email
@@ -342,6 +331,7 @@ jobs:
         env:
           APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
           PRIVATE_KEY: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+          ORGANIZATION_NAME: ${{ secrets.ORGANIZATION_NAME }}
           ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
         with:
@@ -385,7 +375,6 @@ jobs:
               installationId: process.env.INSTALLATION_ID
             });
             const { token } = await auth({ type: "installation" });
-            console.log('Generated token (first 10 chars):', token?.slice(0, 10), 'length:', token?.length);
             return token ? token : null;
       # This step finds the user's login email
       - name: Get login email
