--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -79,34 +79,17 @@ jobs:
             console.log('Generated token (first 10 chars):', token?.slice(0, 10), 'length:', token?.length);
             return token ? token : null;
       # Strip quotes from GITHUB_TOKEN
-      - name: Strip quotes from GITHUB_TOKEN
+      - name: Strip quotes from GITHUB_TOKEN and create license
         id: strip-token
         run: |
           # Remove leading and trailing quotes if present
           CLEAN_TOKEN=$(echo '${{ steps.get-installation-token.outputs.result }}' | sed 's/^"\(.*\)"$/\1/')
-          echo "GITHUB_TOKEN=$CLEAN_TOKEN" >> $GITHUB_ENV
-      # This step assigns a GitHub Copilot license to the user who created the issue
-      - name: Assign GitHub Copilot license
-        id: assign_license
-        continue-on-error: true
-        uses: actions/github-script@v7
-        env:
-          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
-          ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
-        with:
-          script: |
-            const { Octokit } = require("@octokit/action");
-            console.log("Github token length: ", process.env.GITHUB_TOKEN.length);
-            const octokit = new Octokit();
-            const login = context.payload.sender.login;
-            const response = await octokit.request('POST /enterprises/{enterprise}/copilot/selected_users', {
-              enterprise: process.env.ENTERPRISE_NAME,
-              selected_usernames: [login],
-              headers: {
-                'X-GitHub-Api-Version': '2022-11-28'
-              }
-            });
-            return response.status >= 200 && response.status < 300 ? 'success' : 'failure';
+          
+          curl -X POST "https://api.github.com/enterprises/${{ secrets.ENTERPRISE_NAME }}/copilot/selected_users" \
+          -H "Authorization: Bearer ${CLEAN_TOKEN}" \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          -d "{\"selected_usernames\": [\"${{ github.actor }}\"]}"
       # If the previous step was successful, this step comments on the issue and closes it
       - name: Comment and close GitHub Issue on success
         uses: actions/github-script@v7
