--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -84,12 +84,12 @@ jobs:
         run: |
           # Remove leading and trailing quotes if present
           CLEAN_TOKEN=$(echo '${{ steps.get-installation-token.outputs.result }}' | sed 's/^"\(.*\)"$/\1/')
-          
-          curl -X POST "https://api.github.com/enterprises/${{ secrets.ENTERPRISE_NAME }}/copilot/selected_users" \
+
+          curl -X POST "https://api.github.com/orgs/${{ secrets.ENTERPRISE_NAME }}/copilot/selected_users" \
           -H "Authorization: Bearer ${CLEAN_TOKEN}" \
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          -d "{\"selected_usernames\": [\"${{ github.actor }}\"]}"
+          -d "{\"org\": \"${{secrets.ENTERPRISE_NAME}}\", \"selected_usernames\": [\"${{ github.actor }}\"]}"
       # If the previous step was successful, this step comments on the issue and closes it
       - name: Comment and close GitHub Issue on success
         uses: actions/github-script@v7
